--- a/Junior/typemaster-landing-page/scss/components/_section-two.scss
+++ b/Junior/typemaster-landing-page/scss/components/_section-two.scss
@@ -5,8 +5,8 @@
 		margin-left: -3rem;
 		img {
 			max-width: none;
-            object-fit: cover;
-            object-position: center;
+			object-fit: cover;
+			object-position: center;
 			width: 100%;
 			height: 100%;
 		}
@@ -30,7 +30,7 @@
 			grid-area: 1 / 1 / 2 / -1;
 
 			.phone-keyboard {
-                border-radius: $br;
+				border-radius: $br;
 				img {
 					content: url("/assets/tablet/image-phone-and-keyboard.jpg");
 				}
@@ -41,57 +41,69 @@
 				}
 			}
 		}
-        @include breakpoint-up(large){
-            max-height: none;
-            grid-area: 1 / 1 / -1 / 2;
-            .phone-keyboard{
-                img{
-                    content: url("/assets/desktop/image-phone-and-keyboard.jpg");
-                }
-            }
-            .glass-keyboard{
-                img{
-                    content: url("/assets/desktop/image-glass-and-keyboard.jpg");
-                }
-            }
-        }
+		@include breakpoint-up(large) {
+			max-height: none;
+			grid-area: 1 / 1 / -1 / 2;
+			.phone-keyboard {
+				img {
+					content: url("/assets/desktop/image-phone-and-keyboard.jpg");
+				}
+			}
+			.glass-keyboard {
+				img {
+					content: url("/assets/desktop/image-glass-and-keyboard.jpg");
+				}
+			}
+		}
 	}
 	.title {
 		margin-top: toRem(75);
 		@include breakpoint-up(medium) {
-            margin-top: 0;
-            padding: toRem(75) 0;
+			margin-top: 0;
+			padding: toRem(75) 0;
 			grid-area: 2 / 1 / 3 / 2;
-            align-self: center;
+			align-self: center;
 		}
-        @include breakpoint-up(large){
-            padding-bottom: 0;
-            padding-left: toRem(55);
-            grid-area: 1 / 2 / 2 / 3;
-        }
+		@include breakpoint-up(large) {
+			padding-bottom: 0;
+			padding-left: toRem(55);
+			grid-area: 1 / 2 / 2 / 3;
+		}
 	}
 	.desc {
 		margin: 1.5rem 0;
 		@include breakpoint-up(medium) {
-            grid-area: 2 / 2 / 3 / 3;
-            align-self: center;
-            justify-self: center;
+			grid-area: 2 / 2 / 3 / 3;
+			align-self: center;
+			justify-self: center;
 		}
-        @include breakpoint-up(large){
-            padding-left: toRem(55);
-            grid-area: 2 / 2 / 3 / 3;
-            align-self: flex-start;
-        }
+		@include breakpoint-up(large) {
+			padding-left: toRem(55);
+			grid-area: 2 / 2 / 3 / 3;
+			align-self: flex-start;
+		}
 	}
 
 	@include breakpoint-up(medium) {
 		@include grid();
 		grid-template-columns: 3.33fr 6.66fr;
 		grid-template-rows: repeat(2, min-content);
-        gap: 0 toRem(75);
+		gap: 0 toRem(75);
 	}
-    @include breakpoint-up(large){
-        grid-template-columns: 7fr 3fr;
-        grid-template-rows: 240px 240px;
-    }
+	@include breakpoint-up(large) {
+		grid-template-columns: 7fr 3fr;
+		grid-template-rows: 240px 240px;
+
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			background-image: url("/assets/shared/pattern-square.svg");
+			width: toRem(255);
+			height: toRem(240);
+			top: 0;
+			left: 0;
+			transform: translateX(calc(-100% + 14px));
+		}
+	}
 }
